fixed photo Gap in css part 3

--- a/labs/lab-3/part-3/style.css
+++ b/labs/lab-3/part-3/style.css
@@ -57,7 +57,7 @@ nav a {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 5px;
+  gap: 1px;
   border: 3px solid black;
   padding: 10px;
 }
